<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_version">Version 1.11</string>
	<string name="app_name">SportsBoards2D</string>
	<string name="soccer_string">Soccer</string>
	<string name="football_string">Football</string>
	<string name="basketball_string">Basketball</string>
	<string name="hockey_string">Hockey</string>
	<string name="ringette_string">Ringette</string>
	
	<!-- Main Menu Strings -->
	<string name="reset">Reset</string>
	<string name="line_clear">Clear Lines</string>
	<string name="formations">Formations</string>
			<string name="save_form">Save Formation</string>
			<string name="delete_form">Delete Formation</string>
			<string name="load_form">Load Formation</string>
	<string name="playback">Playback Mode</string>
	<string name="players">Players</string>
		<string name="players_create">Create a Player</string>
		<string name="players_view">View Players</string>
		<string name="player_delete">Delete this player</string>
		<string name="players_edit">Edit this players information</string>
	<string name="settings">Preferences</string>
	
	
	
	<string name="default_string">Default</string>
	
	<!--Current Settings Menu Strings -->
	<string name="app_settings">Application Settings</string>
	
	<string name="default_sport">Default board</string>
	<string name="default_sport_description">App will automatically launch this board on startup</string>
	
	
	<string name="line_settings">Line Settings</string>
	<string name="lineEnabled">lineEnabled</string>
	<string name="line_enable">Toggle Line Draw</string>
	<string name="line_enable_description">Enable/Disable line drawing</string>

		<!--  Line Settings Strings -->
		<string name="rTeamLineColor">rTeamLineColor</string>
		<string name="rTeamLineColor_title">Red Team Line Color</string>
		<string name="rTeamLineColor_description">Color of the lines displayed when dragging a red player</string>
		<string name="bTeamLineColor">bTeamLineColor</string>
		<string name="bTeamLineColor_title">Blue Team Line Color</string>
		<string name="bTeamLineColor_description">Color of the lines displayed when dragging a blue player</string>
		<string name="line_type">Line Type</string>
	
	
	<!--  Player Settings Strings -->
		
		<string name="player_settings">Player Settings</string>
		<string name="largePlayers">largePlayers</string>
		<string name="player_size">Player Size</string>
		<string name="player_size_description">Adjust the size of the player icons</string>
		
		
		<string name="player_info_display">player_info_display</string>
		<string name="player_info_display_title">Enable/Disable player info display</string>
		<string name="player_info_display_description">This will cause information about the player to be displayed</string>

		
		<string name="display_when">display_when</string>
		<string name="display_when_title">Display Mode</string>
		<string name="display_when_description">Choose when the information is displayed</string>		
		<string name="display_what">display_what</string>
		<string name="display_what_title">Filter Display</string>
		<string name="display_what_description">Choose what information is displayed</string>
		<string name="playerIDCounter">pID counter</string>
		
		<string name="menuTextColor">menuTextColor</string>		
		<string name="menuTextColor_title">Main Menu Text Color</string>
		<string name="menuTextColor_description">You can change the color of the text for the main menu</string>
		
		<string name="change_player_size">Change Player Size</string>
		
	
	<!-- To be added -->
	
	<string name="enable">Enable Zoom</string>
	<string name="disable">Disable Zoom</string>
	
	<!-- Player Context Menu Strings -->
	
	<string name="swap">Swap</string>
	<string name="hide">Hide</string>
	<string name="exit">Exit</string>
	
	
	
	
	
	
	<string name="enter_form_name">Enter a name for the formation</string>
	
	
	
	
	<string name="confirm_quit">Are you sure you want to exit?</string>
	<string name="confirm_yes">Yes</string>
	<string name="confirm_no">No</string>
	
	<string name="alert_dialog_confirm">Are you sure you want to delete this formation?</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	
	
	
	
	
	
	<string name="player_create_title">Create a Player</string>
	<string name="enter_first_name">First Name</string>
	<string name="enter_last_name">Last Name</string>
	<string name="enter_jersey">Jersey #</string>
	<string name="enter_position">Position</string>
	
	<string name="position_prompt">Enter a position</string>
	
	<!-- Sport Positions -->
	<string name="bball_center">Center</string>
	<string name="bball_powerForward">Power Forward</string>
	<string name="bball_smallForward">Small Forward</string>
	<string name="bball_shootingGuard">Shooting Guard</string>
	<string name="bball_pointGuard">Point Guard</string>
	
	<string name="soccer_goalie">Goal Keeper</string>
	<string name="soccer_striker">Striker</string>
	<string name="soccer_midFielder">Midfielder</string>
	<string name="soccer_defense">Defense</string>
	
	<string name="hockey_center">Center</string>
	<string name="hockey_goalie">Goalie</string>
	<string name="hockey_leftWing">Left Wing</string>
	<string name="hockey_rightWing">Right Wing</string>
	<string name="hockey_leftDefense">Left Defense</string>
	<string name="hockey_rightDefense">Right Defense</string>
	
	<!-- Regex -->
	<string name="regex_first_name">"[A-Z][a-zA-Z]*"</string>
	<string name="regex_last_name">"[A-Z][a-zA-z]+([ '-][A-Z][a-zA-Z]+)*"</string>
	<string name="regex_jerseynum">"[1-9]?[0-9]"</string>
	<string name="regex_position">"[A-Z][A-Z]?[A-Z]?"</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>

</resources>
