<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:fillViewport="true">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<TextView android:id="@+id/spinner_text"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_below="@+id/playernum_edit" 
				android:text="@string/position_prompt" />

			<Spinner android:id="@+id/spinner" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_below="@+id/spinner_text"
				android:prompt="@string/position_prompt" />

			<TextView android:id="@+id/playername_first_view"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:text="@string/enter_first_name" 
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText android:id="@+id/playername_first_edit"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_below="@+id/playername_first_view"
				android:scrollHorizontally="true" 
				android:imeOptions="actionNext" 
				android:autoText="false"
		        android:capitalize="characters"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:inputType="textCapWords" />

			<TextView android:id="@+id/playername_last_view"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_below="@+id/playername_first_edit" 
				android:text="@string/enter_last_name"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText android:id="@+id/playername_last_edit"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_below="@+id/playername_last_view"
				android:scrollHorizontally="true" 
				android:imeOptions="actionNext" 
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:inputType="textCapWords" />


			<TextView android:id="@+id/playernum_view"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_below="@+id/playername_last_edit" 
				android:text="@string/enter_jersey"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText android:id="@+id/playernum_edit"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_below="@+id/playernum_view"
				android:scrollHorizontally="true" 
				android:imeOptions="actionDone"
				android:gravity="fill_horizontal" 
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:inputType="number" />

			

			<LinearLayout
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
			<Button 
				android:id="@+id/ok_button" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_below="@+id/spinner"
				android:layout_alignParentLeft="true"
				android:text="OK"
				android:onClick="onClick"
				android:layout_weight="1" />

			<Button 
				android:id="@+id/cancel_button"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_toRightOf="@+id/ok_button"
				android:layout_below="@+id/spinner"
				android:text="Cancel" 
				android:onClick="cancelClicked" 
				android:layout_weight="1"/>
		</LinearLayout>
		</LinearLayout>
</ScrollView>
